--- a/tarea26-06.html
+++ b/tarea26-06.html
@@ -6,7 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <main></main>
-    <script src="./js/app.js"></script>
+    <main>
+      <h1>TAREA 26-06-13</h1>
+    </main>
+    <script src="./js/tarea-26-06"></script>
   </body>
 </html>
