comienzo de trabajo practico, faltan terminar ejercicios 9 a 11

--- a/tarea-28-06.html
+++ b/tarea-28-06.html
@@ -6,7 +6,9 @@
     <title>Tareas</title>
   </head>
   <body>
-    <main></main>
-    <script src="./js/app.js"></script>
+    <main>
+      <h1>TAREA 26-06-13</h1>
+    </main>
+    <script src="./js/tarea-28-06.js"></script>
   </body>
 </html>
