finalizacion de resolucion  de trabajo practico

--- a/tarea-28-06.html
+++ b/tarea-28-06.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tareas</title>
+    <title>Tareas en Javascript</title>
   </head>
   <body>
     <main>
-      <h1>TAREA 26-06-13</h1>
+      <h2>TRABAJO PRACTICO N° 1</h2>
     </main>
     <script src="./js/tarea-28-06.js"></script>
   </body>
