correccion de errores y agregado de funciones

--- a/dom.html
+++ b/dom.html
@@ -40,28 +40,29 @@
             </div>
           </div>
           <div class="col-12">
-            <h5 id="parr2" class="text-align-center bg-info">
+            <h5 id="parr2" class="text-align-center bg-secondary text-white">
               Haz Clic en el boton 2 para iniciar el Contador
             </h5>
             <div class="d-flex justify-content-center mb-3">
-              <button
-                id="button2"
-                class="btn btn-warning"
-                onclick="countClics()"
-              >
+              <button id="button2" class="btn btn-info" onclick="countClics()">
                 BOTON 2
               </button>
             </div>
           </div>
           <div class="col-12">
             <h5>
-              Deslice el raton (mouse)🖱️ sobre el siguiente parrafo para cambiar
-              de modo:
-              <span class="bg-dark text-white border border-secondary"
-                >OSCURO</span
-              ><span class="text-dark border border-secondary">CLARO</span>
+              Haz clic en el siguiente párrafo o si estas en PC desliza el ratón
+              (mouse)🖱️ sobre el siguiente parrafo para cambiar de modo:
             </h5>
-            <p id="parr3" class="text-align-center" onmouseover="changeStyle()">
+            <span class="bg-dark text-white border border-secondary"
+              >OSCURO</span
+            ><span class="text-dark border border-secondary">CLARO</span>
+            <p
+              id="parr3"
+              class="text-align-center"
+              onmouseover="changeStyle()"
+              onclick="changeStyleClic()"
+            >
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
               porro odit neque veniam provident fugiat saepe facilis magnam
               vero? In nostrum nemo repellat vel omnis laborum molestias veniam
@@ -107,11 +108,7 @@
                   <label for="input3" class="form-label text-danger"
                     >Producto N° 3</label
                   >
-                  <input
-                    type="text"
-                    class="form-control text-danger"
-                    id="input3"
-                  />
+                  <input type="text" class="form-control" id="input3" />
                 </div>
                 <div class="mb-3">
                   <label for="input4" class="form-label text-danger"
@@ -163,14 +160,14 @@
             <div class="d-flex justify-content-center mb-3">
               <button
                 id="button1"
-                class="btn btn-primary"
+                class="btn btn-success"
                 onclick="aumentarFuente()"
               >
                 + AUMENTAR +
               </button>
               <button
                 id="button1"
-                class="btn btn-primary ms-2"
+                class="btn btn-success ms-2"
                 onclick="disminuirFuente()"
               >
                 - DISMINUIR -
